--- a/pom.xml
+++ b/pom.xml
@@ -33,5 +33,10 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>de.congrace</groupId>
+      <artifactId>exp4j</artifactId>
+      <version>0.3.10</version>
+    </dependency>
   </dependencies>
 </project>
