Ajout de librairies, décomposition des pbs.
git-svn-id: https://dev.isen.fr/svn/2012-2013/cir3/java/project/group5/geneticAlgo/GeneticAlgorithm@48 84736ae8-fca8-4d2c-b905-760bd7953024

--- a/pom.xml
+++ b/pom.xml
@@ -38,5 +38,19 @@
       <artifactId>exp4j</artifactId>
       <version>0.3.10</version>
     </dependency>
+    <dependency>
+      <groupId>berlios</groupId>
+      <artifactId>jmathplot</artifactId>
+      <version>39</version>
+      <scope>system</scope>
+      <systemPath>${basedir}/lib/jmathplot.jar</systemPath>
+    </dependency>
+    <dependency>
+      <groupId>berlios</groupId>
+      <artifactId>jmatharray</artifactId>
+      <version>39</version>
+      <scope>system</scope>
+      <systemPath>${basedir}/lib/jmatharray.jar</systemPath>
+    </dependency>
   </dependencies>
 </project>
