--- a/pom.xml
+++ b/pom.xml
@@ -43,5 +43,16 @@
 			<artifactId>jmathplot</artifactId>
 			<version>39</version>
 		</dependency>
+    <dependency>
+      <groupId>com.kenai.nbpwr</groupId>
+      <artifactId>org-jdesktop-swingx</artifactId>
+      <version>1.6-201002261215</version>
+      <type>nbm</type>
+    </dependency>
+    <dependency>
+      <groupId>org.jdesktop.swingx</groupId>
+      <artifactId>jxmapviewer2</artifactId>
+      <version>1.1</version>
+    </dependency>
   </dependencies>
 </project>
