--- a/pom.xml
+++ b/pom.xml
@@ -45,14 +45,9 @@
 		</dependency>
     <dependency>
       <groupId>com.kenai.nbpwr</groupId>
-      <artifactId>org-jdesktop-swingx</artifactId>
-      <version>1.6-201002261215</version>
+      <artifactId>org-jdesktop-swingx-ws</artifactId>
+      <version>1.0-201002281504</version>
       <type>nbm</type>
-    </dependency>
-    <dependency>
-      <groupId>org.jdesktop.swingx</groupId>
-      <artifactId>jxmapviewer2</artifactId>
-      <version>1.1</version>
     </dependency>
   </dependencies>
 </project>
