--- a/pom.xml
+++ b/pom.xml
@@ -25,29 +25,42 @@
     <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+  
+    <repositories>
+        <repository>
+            <id> jmathplot_repo </id>
+            <name> jmathplot maven repository </name>
+            <url> http://igetdb.sourceforge.net/maven2-repository/jmathplot/jmathplot/1.0/ </url>
+        </repository>
+    </repositories>  
 
   <dependencies>
+      
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
     <dependency>
       <groupId>de.congrace</groupId>
       <artifactId>exp4j</artifactId>
       <version>0.3.10</version>
     </dependency>
-		<dependency>
-			<groupId>berlios</groupId>
-			<artifactId>jmathplot</artifactId>
-			<version>39</version>
-		</dependency>
+    
+    
     <dependency>
       <groupId>com.kenai.nbpwr</groupId>
       <artifactId>org-jdesktop-swingx-ws</artifactId>
       <version>1.0-201002281504</version>
       <type>nbm</type>
+    </dependency>
+    <dependency>
+      <groupId>berlios</groupId>
+      <artifactId>jmathplot</artifactId>
+      <version>39</version>
+      <type>jar</type>
     </dependency>
   </dependencies>
 </project>
