--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <groupId>group5</groupId>
-  <artifactId>GeneticAlgorithm</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+    <groupId>group5</groupId>
+    <artifactId>GeneticAlgorithm</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
-  <name>GeneticAlgorithm</name>
-  <url>http://maven.apache.org</url>
+    <name>GeneticAlgorithm</name>
+    <url>http://maven.apache.org</url>
     <build>
         <plugins>
             <plugin>
@@ -20,11 +20,30 @@
                     <target>1.7</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>1.2.2</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                </transformer>
+                            </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
     <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
   
     <repositories>
         <repository>
@@ -34,33 +53,29 @@
         </repository>
     </repositories>  
 
-  <dependencies>
-      
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-    
-    <dependency>
-      <groupId>de.congrace</groupId>
-      <artifactId>exp4j</artifactId>
-      <version>0.3.10</version>
-    </dependency>
-    
-    
-    <dependency>
-      <groupId>com.kenai.nbpwr</groupId>
-      <artifactId>org-jdesktop-swingx-ws</artifactId>
-      <version>1.0-201002281504</version>
-      <type>nbm</type>
-    </dependency>
-    <dependency>
-      <groupId>berlios</groupId>
-      <artifactId>jmathplot</artifactId>
-      <version>39</version>
-      <type>jar</type>
-    </dependency>
-  </dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>de.congrace</groupId>
+            <artifactId>exp4j</artifactId>
+            <version>0.3.10</version>
+        </dependency>
+        <dependency>
+            <groupId>com.kenai.nbpwr</groupId>
+            <artifactId>org-jdesktop-swingx-ws</artifactId>
+            <version>1.0-201002281504</version>
+            <type>nbm</type>
+        </dependency>
+        <dependency>
+            <groupId>berlios</groupId>
+            <artifactId>jmathplot</artifactId>
+            <version>39</version>
+            <type>jar</type>
+        </dependency>
+    </dependencies>
 </project>
