--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <Main-Class>geneticalgorithm.GeneticAlgorithm</Main-Class>
                                 </transformer>
                             </transformers>
                         </configuration>
