--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>GeneticAlgorithm</name>
+    <name>JGaSolver</name>
     <url>http://maven.apache.org</url>
     <build>
         <plugins>
