--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>group5</groupId>
-    <artifactId>GeneticAlgorithm</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>JGaSolver</artifactId>
+    <version>1.0</version>
     <packaging>jar</packaging>
 
     <name>JGaSolver</name>
